--- a/index.html
+++ b/index.html
@@ -8,8 +8,25 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<nav id="Nav-bar"> 
+  <a href="#welcome-section">About</a>
+  <a href="#projects">Projects</a>
+</nav>
+    <section id="welcome-section"><h1>Hey I am Mimic</h1></section>
+<section id="projects" >
+  
+  <h1>project-tile</h1>
 
-    <!--
+  
+  <div>
+    <a href="" > <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project"></a>
+  </div>
+</section> 
+<section id="contact" >
+  <a href="https://github.com/massaillon" id="profile-link"></a>
+</section>
+
+<!--
 
     Hello Camper!
 
@@ -22,7 +39,7 @@
 
     -->
 
-   <h1>Hello World, we are software developers!</h1>
+   <!--<h1>Hello World, we are software developers!</h1> -->
     
     <script  src="js/index.js"></script>
   </body>
