--- a/index.html
+++ b/index.html
@@ -8,23 +8,6 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<nav id="Nav-bar"> 
-  <a href="#welcome-section">About</a>
-  <a href="#projects">Projects</a>
-</nav>
-    <section id="welcome-section"><h1>Hey I am Mimic</h1></section>
-<section id="projects" >
-  
-  <h1>project-tile</h1>
-
-  
-  <div>
-    <a href="" > <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project"></a>
-  </div>
-</section> 
-<section id="contact" >
-  <a href="https://github.com/massaillon" id="profile-link"></a>
-</section>
 
 <!--
 
@@ -40,6 +23,58 @@
     -->
 
    <!--<h1>Hello World, we are software developers!</h1> -->
+
+    <nav id="Nav-bar"> 
+      <ul class="nav-list">
+        <li><a href="#welcome-section">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <section id="welcome-section">
+      <h1>Hey We are Mohamed & Massaillon</h1>
+      <p>a web developers</p>
+    </section>
+
+    <section id="projects" >
+      <h1>These are some of my projects</h1>
+      <div class="projects-grid">
+        <a href="" class="project"> 
+          <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project" target="_blank">
+          <p class="project-title">Tribute Page</p>
+        </a>
+        <a href="" class="project"> 
+          <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project" target="_blank">
+          <p class="project-title">Tribute Page</p>
+        </a>
+        <a href="" class="project"> 
+          <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project" target="_blank">
+          <p class="project-title">Tribute Page</p>
+        </a>
+        <a href="" class="project"> 
+          <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project" target="_blank">
+          <p class="project-title">Tribute Page</p>
+        </a>
+        <a href="" class="project"> 
+          <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project" target="_blank">
+          <p class="project-title">Tribute Page</p>
+        </a>
+      </div>
+    </section> 
+
+    <section id="contact" >
+      <h2>Let's work together...</h2>
+      <p>How do you take your coffee?</p>
+      <br>
+      <div class="contact-links">
+        <a href="#" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
+        <a id="profile-link" href="https://github.com/massaillon" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
+        <a href="#" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i> Twitter</a>
+        <a href="#" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+        <a href="#" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+      </div>
+    </section>
     
     <script  src="js/index.js"></script>
   </body>
